2008-02-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* fakemail.c (MAIL_PROGRAM_NAME): Remove unused conditional.
	(main): Replace MAIL_PROGRAM_NAME with its value.

	* Makefile.in (REGEXP_IN_LIBC): Remove reference to obsolete
	variable.

2008-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacsclient.c (decode_options): Pass --display implicitly if -c
	is specified.  Only set tty if -t or -c is specified.

2008-02-04  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (lisp1): Use (), not {}.

2008-02-04  Tom Tromey  <tromey@redhat.com>

	* etags.c: Add "GTY" as synonym for __attribute__. Update gperf output.

2008-02-01  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (obj): Sync with src/Makefile.in
	(TOOLTIP_SUPPORT, WINDOW_SUPPORT): New definitions.
	(WINNT_SUPPORT): Add term/w32-win.elc.
	(lisp1, lisp2): Sync with lisp in src/Makefile.in.

2008-02-01  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (obj): Add font.o and w32font.o

2008-02-01  Zhang Wei <id.brep@gmail.com>  (tiny change)

	* lib-src/makefile.w32-in (lisp1): Delete ucs-tables.elc,
	utf-8.elc, and latin-*.el.

2008-01-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacsclient.c (decode_options): Default to NULL display, as Emacs-22.
	Allow the -d option under w32 again, for those rare cases where it
	actually does make sense.

2008-01-25  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (set_tcp_socket): Don't send "\n" after
	the authentication string; there's no need to haste.

2008-01-22  Chong Yidong  <cyd@stupidchicken.com>

	* pop.c (pop_stat, pop_last): Fix last fix.

2008-01-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* movemail.c: Remove references to XENIX.

2008-01-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* movemail.c:
	* make-docfile.c: Remove reference to symbols defined by systems
	not supported anymore: MAC_OS8, XENIX and STRIDE.

2008-01-12  Eli Zaretskii  <eliz@gnu.org>

	* emacsclient.c (decode_options) [WINDOWSNT]: Don't use the value